# pieeg_app

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy-pages.yml
acquirer/: codec.py  lsl_source.py  pyproject.toml  simulator.py  spi_driver.py  stream.py
acquirer/tests/: test_codec.py  test_simulator.py
deploy/: pieeg-app-bridge.service  pieeg-app-server.service
docs/: analysis.md  architecture.md
scripts/: e2e_check.py
server/: aggregate.py  main.py  pyproject.toml
server/tests/: test_aggregate.py  test_hub.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: brain3d.ts  chart.ts  fft.ts  main.ts  mind.ts  montage.ts  simulator.ts  source.ts  styles.css  topography.ts  trajectory3d.ts
web/test/: fft.test.ts  mind.test.ts  montage.test.ts  simulator.test.ts
